<resources>
    <string name="app_name">Perfect</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="signinEmail">Sign In With Email</string>
    <string name="facebook_app_id">120685165267045</string>
    <string name="title_activity_signin">SigninActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="signup">Signup With Email</string>
    <string name="login">Email or Phone</string>
    <string name="pass">Password</string>
    <string name="fb">Sign In with Facebook</string>
    <string name="log_in">Login</string>
    <string name="create">Create New Account</string>
    <string name="username">Ahmed Reda</string>
    <string name="ur_email">ahmed_reda@gmail.com</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="maintenance">Maintenance</string>
    <string name="news">News</string>
    <string name="designs">Designs</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="perfect">Perfect</string>
    <string name="perfect_news">Perfect News</string>
    <string name="time">10:00 AM</string>
    <string name="post">Bla bla bla bla</string>
    <string name="contracting">Contracting</string>
    <string name="civil">Civil</string>
    <string name="arc">Architecture</string>
    <string name="elec">Electrical</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_event">Events</string>
    <string name="title_calculator">Calculator</string>
    <string name="prompt">Prompt</string>
    <string name="title_news">News</string>
    <string name="title_filter">Filter</string>
    <string name="title_profile">Profile</string>
    <string name="title_activity_ads">AdsActivity</string>
    <string name="must_login">Login Required</string>
    <string name="login_message">You must be logged in to use this feature</string>
    <string name="select_category">Select which Category your ad fit into</string>
    <string name="title_activity_ad_description">AdDescriptionActivity</string>
    <string name="land">Lands for sale</string>
    <string name="residential">Residential</string>
    <string name="furniture">Furniture for sale</string>
    <string name="appliances">Appliances for sale</string>
    <string name="commercial">Commercial</string>
    <string name="ad_title">Ad title</string>
    <string name="land_desc">Ad Description</string>
    <string name="land_desc_eg">eg. Agricultural land or land of buildings</string>
    <string name="price">Price</string>
    <string name="priceDesc">Price Details</string>
    <string name="location">Location</string>
    <string name="area">Area</string>
    <string name="land_ad_title">eg. Land for sale in New Cairo</string>
    <string name="suggest_price">eg. 4000</string>
    <string name="price_desc">eg. Start from 4000 /meter</string>
    <string name="write_loc">eg. Fifth Settlement</string>
    <string name="write_address">eg. fifth settlement - 8th District....</string>
    <string name="area_desc">eg. meter unit</string>
    <string name="viewmore">View more</string>
    <string name="todo">TODO</string>
    <string name="add">Add</string>
    <string name="done">Done</string>
    <string name="address">Address</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="realestate">Real Estate</string>
    <string name="viewAll">View All</string>
    <string name="material">Material</string>
    <string name="title_activity_perfect">PerfectActivity</string>
    <string name="supplial">Supply</string>
    <string name="construction">Construction</string>
    <string name="design">Design</string>
    <string name="finishing">Finishing</string>
    <string name="offers">Offers</string>
    <string name="advertisment">Advertisement</string>
</resources>
