<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <!--<item-->
        <!--android:id="@+id/navigation_add"-->
        <!--android:icon="@drawable/ic_calc"-->
        <!--android:title="@string/title_calculator" />-->

    <!--<item-->
        <!--android:id="@+id/news"-->
        <!--android:icon="@drawable/ic_notifications_black_24dp"-->
        <!--android:title="@string/title_news" />-->

    <item
        android:id="@+id/profile"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/title_profile" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_event"
        android:title="@string/title_event" />

</menu>
