<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/viewBg"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="eg.com.perfect_contracting.perfect.ui.activities.AdsActivity"
        tools:showIn="@layout/activity_ads">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:text="@string/select_category"
            android:textColor="#000"
            android:textSize="20sp" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/viewBg"
            android:padding="20dp">

            <TableRow>

                <android.support.v7.widget.CardView
                    android:id="@+id/card1"
                    android:layout_width="0dp"
                    android:layout_height="150dp"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    app:cardBackgroundColor="@color/colorAccent2"
                    app:cardCornerRadius="5dp">

                    <LinearLayout
                        android:id="@+id/linear1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/imageView14"
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:scaleType="centerCrop"
                            app:srcCompat="@drawable/ic_for_sale" />

                        <TextView
                            android:id="@+id/textView7"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/land"
                            android:textColor="@color/white"
                            android:textSize="20sp" />
                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/card2"
                    android:layout_width="0dp"
                    android:layout_height="150dp"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    app:cardBackgroundColor="@color/colorAccent3"
                    app:cardCornerRadius="5dp">

                    <LinearLayout
                        android:id="@+id/linear2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/imageView5"
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:scaleType="centerCrop"
                            app:srcCompat="@drawable/ic_three_buildings" />

                        <TextView
                            android:id="@+id/textView9"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/residential"
                            android:textColor="@color/white"
                            android:textSize="20sp" />
                    </LinearLayout>
                </android.support.v7.widget.CardView>
            </TableRow>

            <TableRow>

                <android.support.v7.widget.CardView
                    android:id="@+id/card3"
                    android:layout_width="0dp"
                    android:layout_height="150dp"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    app:cardBackgroundColor="@color/colorAccent1"
                    app:cardCornerRadius="5dp">

                    <LinearLayout
                        android:id="@+id/linear3"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/imageView7"
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:scaleType="centerCrop"
                            app:srcCompat="@drawable/ic_sofa" />

                        <TextView
                            android:id="@+id/textView10"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/furniture"
                            android:textColor="@color/white"
                            android:textSize="20sp" />
                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/card4"
                    android:layout_width="0dp"
                    android:layout_height="150dp"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:background="@color/color3"
                    app:cardBackgroundColor="@color/colorAccent4"
                    app:cardCornerRadius="5dp">


                    <LinearLayout
                        android:id="@+id/linear4"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/imageView13"
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:scaleType="centerCrop"
                            app:srcCompat="@drawable/ic_washing_machine" />

                        <TextView
                            android:id="@+id/textView11"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/appliances"
                            android:textColor="@color/white"
                            android:textSize="20sp" />
                    </LinearLayout>
                </android.support.v7.widget.CardView>
            </TableRow>

            <TableRow>

                <android.support.v7.widget.CardView
                    android:id="@+id/card5"
                    android:layout_width="0dp"
                    android:layout_height="150dp"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    app:cardBackgroundColor="@color/google"
                    app:cardCornerRadius="5dp">

                    <LinearLayout
                        android:id="@+id/linear5"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/imageView12"
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:scaleType="centerCrop"
                            app:srcCompat="@drawable/ic_shop" />

                        <TextView
                            android:id="@+id/textView12"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/commercial"
                            android:textColor="@color/white"
                            android:textSize="20sp" />
                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <FrameLayout
                    android:id="@+id/card6"
                    android:layout_width="0dp"
                    android:layout_height="150dp"
                    android:layout_margin="10dp"
                    android:layout_weight="1"></FrameLayout>

            </TableRow>
        </TableLayout>


    </LinearLayout>
</android.support.v4.widget.NestedScrollView>